--- a/mythplugins/README
+++ b/mythplugins/README
@@ -1,4 +1,4 @@
-This is a consolidation of all the official MythTV plugins that
+This is a consolidation of all the plugins that
 used to be distributed as separate downloads from mythtv.org.
 
 WARNING: You must install MythTV before configuring
